--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="description" content="Snake game">
-    <meta name="author" content="Lin">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://linsanitynhb.github.io/linsanitynhb-github.io/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Snake game" />
+    <meta property="og:description" content="How much does culture influence creative thinking?" />
 
     <style>
         html,
