--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Snake game" />
     <meta property="og:description" content="How much does culture influence creative thinking?" />
+    <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
 
     <style>
         html,
