--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Snake game" />
     <meta property="og:description" content="How much does culture influence creative thinking?" />
-    <meta property="og:image" content="<%= require('./assets/images/snake.jpg') %>" />
+    <meta property="og:image" content="https://github.com/linsanitynhb/linsanitynhb-github.io/blob/main/assets/images/snake.jpg" />
 
     <style>
         html,
