--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Snake game" />
     <meta property="og:description" content="How much does culture influence creative thinking?" />
-    <link rel = "icon" type = "image/png" href = "./assets/images/snake.jpg">
+    <meta property="og:image" content="${require(./assets/images/snake.jpg)}" />
 
     <style>
         html,
